--- a/methode-image-binary-mapper.yaml
+++ b/methode-image-binary-mapper.yaml
@@ -17,7 +17,7 @@ consumer:
     severity: 2
     businessImpact: "Newly published Methode image binaries will not be available from the S3"
     technicalSummary: "Tests that kafka-proxy is reachable and message can be consumed"
-    panicGuideUrl: "https://sites.google.com/a/ft.com/ft-technology-service-transition/home/run-book-library/methode-image-binary-mapper"
+    panicGuideUrl: "https://dewey.ft.com/up-mibm.html"
   systemCode: methode-web-pub
 
 producer:
@@ -34,7 +34,7 @@ producer:
       severity: 2
       businessImpact: "Newly published Methode image models will not be available from the Content API"
       technicalSummary: "Tests that kafka-proxy is reachable and the CmsPublicationEvents topic exists"
-      panicGuideUrl: "https://sites.google.com/a/ft.com/ft-technology-service-transition/home/run-book-library/methode-image-binary-mapper"
+      panicGuideUrl: "https://dewey.ft.com/up-mibm.html"
 
 contentUriPrefix: http://methode-image-binary-mapper.svc.ft.com/image/binary
 
