:sparkles: Adding mapping support for PDF type. Adding test cases.

--- a/methode-image-binary-mapper-test.yaml
+++ b/methode-image-binary-mapper-test.yaml
@@ -57,4 +57,4 @@ producer:
     technicalSummary: "Tests that kafka-proxy is reachable and the CmsPublicationEvents topic exists"
     panicGuideUrl: ""
 
-contentUriPrefix: http://methode-image-mapper.svc.ft.com/image/model
+contentUriPrefix: http://methode-image-mapper.svc.ft.com/image/binary
