--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <dw.version>0.7.1</dw.version>
+    <advanced-dropwizard-healthcheck.version>4.14.1</advanced-dropwizard-healthcheck.version>
     <jaxrs-build-info-resource.version>1.1.1</jaxrs-build-info-resource.version>
     <junit.version>4.11</junit.version>
     <mockito-core.version>1.9.5</mockito-core.version>
@@ -56,6 +57,11 @@
       <groupId>io.dropwizard</groupId>
       <artifactId>dropwizard-client</artifactId>
       <version>${dw.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.github.Financial-Times</groupId>
+      <artifactId>advanced-dropwizard-healthcheck</artifactId>
+      <version>${advanced-dropwizard-healthcheck.version}</version>
     </dependency>
     <dependency>
       <groupId>com.github.Financial-Times</groupId>
