--- a/helm/methode-image-binary-mapper/values.yaml
+++ b/helm/methode-image-binary-mapper/values.yaml
@@ -8,8 +8,10 @@ replicaCount: 2
 image:
   repository: coco/methode-image-binary-mapper
   pullPolicy: IfNotPresent
-#resources:
-#  limits:
-#    memory: 256Mi
+resources:
+  requests:
+    memory: 360Mi
+  limits:
+    memory: 1Gi
 
 
