Adding whitelist for external binary URLs to allow.

--- a/methode-image-binary-mapper-test.yaml
+++ b/methode-image-binary-mapper-test.yaml
@@ -58,3 +58,6 @@ producer:
     panicGuideUrl: ""
 
 contentUriPrefix: http://methode-image-mapper.svc.ft.com/image/binary
+
+externalBinaryUrlWhitelist:
+  - "https://ig\\.ft\\.com/.*"
