--- a/methode-image-binary-mapper.yaml
+++ b/methode-image-binary-mapper.yaml
@@ -64,3 +64,6 @@ logging:
 appInfo:
     systemCode: "up-mibm"
     description: "Identifies the images received from Methode, transforms the binary content into UP format."
+
+externalBinaryUrlWhitelist:
+  - "https://ig\\.ft\\.com/.*"
